# rpi-pico-w-air-monitor

./: README.md  main.py
backend/: docker-compose.yaml  grafana-dashboard.json  grafana.ini
backend/grafana-provisioning/: redis.yaml
backend/mqtt_server/: Cargo.toml  Dockerfile
backend/mqtt_server/src/: main.rs
pico/: CMakeLists.txt  bme280.c  bme280.h  lwipopts.h  main.c
